Move to using pre-compiled headers & optimized qmake; should speed up compiling Qt as well as ports that depend on qmake.  Remove trailing '/' from SDK paths since that seems confuse up qmake.  Move any SQL extensions from being in the Qt libraries into separate plugins. Corrected comment on fixing .pc (etc) files.  No revision bump since these changes do not require it.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69800 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac-devel/Portfile
+++ b/dports/aqua/qt4-mac-devel/Portfile
@@ -105,14 +105,16 @@ configure.args                                            \
     -system-sqlite                                        \
     -openssl-linked                                       \
     -dbus-linked                                          \
+    -pch                                                  \
     -fast                                                 \
     -nomake demos                                         \
     -nomake examples                                      \
+    -optimized-qmake                                      \
     -arch            \"${build_arch}\"
 
 # Stop configure script from searching for SQL Drivers
 #    not available from MacPorts.
-foreach driver {db2 ibase oci sqlite_symbian tds} {
+foreach driver {db2 ibase oci tds} {
     configure.args-append -no-sql-${driver}
 }
 
@@ -156,11 +158,13 @@ variant mysql description {Enable MySQL SQL Driver} {
     lunshift header_path ${prefix}/include/mysql5/mysql
     lunshift library_path ${prefix}/lib/mysql5/mysql
     configure.args-delete -no-sql-mysql
+    configure.args-append -plugin-sql-mysql
 }
 
 variant odbc description {Enable iODBC SQL Driver} {
     depends_lib-append port:libiodbc
     configure.args-delete -no-sql-odbc
+    configure.args-append -plugin-sql-odbc
 }
 
 variant psql description {Enable PostgreSQL SQL Driver} {
@@ -168,11 +172,13 @@ variant psql description {Enable PostgreSQL SQL Driver} {
     lunshift header_path ${prefix}/include/postgresql83
     lunshift library_path ${prefix}/lib/postgresql83
     configure.args-delete -no-sql-psql
+    configure.args-append -plugin-sql-psql
 }
 
 variant sqlite2 description {Enable SQLite version 2 SQL Driver} {
     depends_lib-append port:sqlite2
     configure.args-delete -no-sql-sqlite2
+    configure.args-append -plugin-sql-sqlite2
 }
 
 variant raster description {Use raster graphics system by default} {
@@ -205,6 +211,7 @@ variant universal {
 # and, build as Carbon by disabling Cocoa.
 platform darwin 8 {
     configure.args-delete -cocoa
+    configure.args-append -carbon
     post-configure {
         fs-traverse item ${worksrcpath} {
             if {"Makefile" == [file tail ${item}]} {
@@ -219,9 +226,9 @@ platform darwin 8 {
 platform darwin 9 {
     if {![variant_isset universal] || ![info exists universal_sysroot]} {
         if {[file exists /Developer/SDKs/MacOSX10.5.sdk]} {
-            configure.args-append -sdk /Developer/SDKs/MacOSX10.5.sdk/
+            configure.args-append -sdk /Developer/SDKs/MacOSX10.5.sdk
         } else {
-            ui_msg "No SDK found in Developer/SDKs ; \
+            ui_msg "No SDK found in Developer/SDKs for 10.5 ; \
 configure will probably fail. \n \
 Please install Apple's Developer Tools again."
         }
@@ -233,9 +240,9 @@ Please install Apple's Developer Tools again."
 platform darwin 10 {
     if {![variant_isset universal] || ![info exists universal_sysroot]} {
         if {[file exists /Developer/SDKs/MacOSX10.6.sdk]} {
-            configure.args-append -sdk /Developer/SDKs/MacOSX10.6.sdk/
+            configure.args-append -sdk /Developer/SDKs/MacOSX10.6.sdk
         } else {
-            ui_msg "No SDK found in /Developer/SDKs ; \
+            ui_msg "No SDK found in /Developer/SDKs for 10.6 ; \
 configure will probably fail. \n \
 Please install Apple's Developer Tools again."
         }
@@ -258,11 +265,9 @@ post-patch {
 post-destroot {
     set destroot_qt ${destroot}${qt_dir}
 
-    # Fix .pc and .prl files by changing ${destroot}/lib to ${qt_dir}/lib
+    # Fix .pc and .prl files by changing ${worksrcpath}/lib to ${qt_dir}/lib
     foreach fixfile [glob -nocomplain -directory ${destroot} ${qt_dir}/lib/pkgconfig/* ${qt_dir}/lib/*.prl ${qt_dir}/lib/*/*.prl ${qt_dir}/share/${dirname}/demos/shared/*.prl] {
-        reinplace  \
-            "s|${worksrcpath}/lib|${qt_dir}/lib|g" \
-            ${fixfile}
+        reinplace "s|${worksrcpath}/lib|${qt_dir}/lib|g" ${fixfile}
     }
 
     # Install documentation.
