add patches for ppc, #24954
git-svn-id: https://svn.macports.org/repository/macports/trunk@69804 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/alpine/Portfile
+++ b/dports/mail/alpine/Portfile
@@ -21,7 +21,8 @@ master_sites  ftp://ftp.cac.washington.edu/alpine/ \
 checksums  md5 84e44cbf71ed674800a5d57eed9c1c52
 use_bzip2  yes
 
-patchfiles patch-Makefile.in.diff
+patchfiles patch-Makefile.in.diff \
+           patch-configure.diff
 patch.pre_args -p1
 
 platform darwin 10 {
