cairomm-devel: update to version 1.9.1, depend on cairo-devel by default which is usually required.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69808 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/cairomm-devel/Portfile
+++ b/dports/graphics/cairomm-devel/Portfile
@@ -6,8 +6,7 @@ PortSystem 1.0
 name            cairomm-devel
 conflicts       cairomm
 set my_name     cairomm
-version         1.7.2
-revision        2
+version         1.9.1
 categories      graphics
 maintainers     devans openmaintainer
 dist_subdir     ${my_name}
@@ -23,11 +22,11 @@ homepage        http://cairographics.org/
 master_sites    ${homepage}releases/
 platforms       darwin
 
-checksums       md5     b4758616872cb11068cba4e8d3c38b89 \
-                sha1    d0c84195d7c4f16688283af259dd6438dddb0db6 \
-                rmd160  4587a5e87bd6be171b926cc5f1ba38da6caf4bab
+checksums       md5     71be2a2fc450637d55cd8239b8691933 \
+                sha1    23f3ca5b3c624250d35ab1bfd51b3b06cd28280e \
+                rmd160  dd837aa60bbb40d1f3856c8e50963fe411a338af
 
-depends_lib     path:lib/pkgconfig/cairo.pc:cairo \
+depends_lib     path:lib/pkgconfig/cairo.pc:cairo-devel \
                 port:libsigcxx2
 
 livecheck.type  regex
