--- a/dports/security/gss/Portfile
+++ b/dports/security/gss/Portfile
@@ -1,8 +1,9 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 name                gss
-version             0.1.5
+version             1.0.1
 categories          security
 maintainers         nomaintainer
 description         GNU Generic Security Service Library
@@ -15,10 +16,10 @@ long_description \
 platforms           darwin
 
 homepage            http://www.gnu.org/software/gss/
-master_sites        ftp://alpha.gnu.org/gnu/gss/ http://alpha.gnu.org/gnu/gss/
-checksums           md5     d65431dd4dd35cfb8f4433b41ff75fbc \
-                    sha1    b3d3cb530524730c2b128289410f973e1131f520 \
-                    rmd160  1c88ea04c2007241677cdd6e1322df44c2fefe9c
+master_sites        gnu
+checksums           md5     b044abfe64ad94e509f316c06d9b7422 \
+                    sha1    ae1ef7c7fa708db8a399312041d75e73621689ea \
+                    rmd160  3a9cf55288636eb72a8ef687e07424161490c72d
 
 depends_build       port:pkgconfig
 
@@ -39,6 +40,5 @@ post-destroot {
 }
 
 livecheck.type      regex
-livecheck.url       http://alpha.gnu.org/gnu/gss/
+livecheck.url       http://ftpmirror.gnu.org/gnu/gss/
 livecheck.regex     ${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}
-
