Fix 'yafc' so that it works using either MIT's Kerberos5 latest or Heimdal latest.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69817 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/yafc/Portfile
+++ b/dports/net/yafc/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem         1.0
 
 name               yafc
 version            1.1.1
-revision           1
+revision           2
 categories         net
 platforms          darwin
 maintainers        nomaintainer
@@ -28,23 +29,42 @@ checksums          md5 832d074183a36ee15b47553ed5962fce \
                    sha1 d88132e1b389d74533f9eaa94f1a6d02787c03c8 \
                    rmd160 1a1af7f618e9fada90b23390e64ec0ee4c8ed370
 
-patchfiles         patch-src__syshdr.h.diff
+# yafc -requires- kerberos for compiling on OSX; by default, choose
+# the MIT version but allow for Heimdal variant.  openssl is required
+# for the deprecated function "des_read_pw_string".
 
-depends_lib        port:readline
+patchfiles                   \
+    patch-src__input.c.diff  \
+    patch-src__syshdr.h.diff \
+    patch-lib__gssapi.c-krb-mit.diff
 
-configure.args     --mandir=${prefix}/share/man \
-                   --infodir=${prefix}/share/info \
-                   --with-readline-lib=${prefix}/lib \
-                   --with-readline-include=${prefix}/include
+depends_lib        \
+    port:readline  \
+    port:kerberos5 \
+    port:openssl
 
-platform darwin 8 {
-  patchfiles-append patch-lib__gssapi.c.diff \
-                    patch-src__input.c.diff
-}
+# for _ossl_old_des_read_pw_string
+configure.ldflags -lcrypto
 
-platform darwin 9 {
-  patchfiles-append patch-lib__gssapi.c-darwin9.diff \
-                    patch-src__input.c.diff
+configure.args                     \
+    --mandir=${prefix}/share/man   \
+    --infodir=${prefix}/share/info \
+    --with-readline=${prefix}/lib  \
+    --without-krb4                 \
+    --with-krb5=${prefix}
+
+variant heimdal description \
+    {Use Heimdal for Kerberos 5 network authentication, not MIT variety} \
+{
+    # remove MIT style parameters
+    configure.args-delete  --with-krb5=${prefix}
+    depends_lib-delete     port:kerberos5
+    patchfiles-delete patch-lib__gssapi.c-krb-mit.diff
+
+    # add Heimdal style parameters
+    depends_lib-append     port:heimdal
+    configure.args-append  --with-krb5=${prefix}/libexec/heimdal
+    patchfiles-append patch-lib__gssapi.c-krb-heimdal.diff
 }
 
 livecheck.regex    {(\d+(?:\.\d+)*) released}
