--- a/dports/net/heimdal/Portfile
+++ b/dports/net/heimdal/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name		heimdal
-version		1.2.1
+version		1.3.3
 categories	net security
 maintainers	landonf openmaintainer
 platforms	darwin
@@ -21,20 +22,67 @@ long_description	Kerberos provides a means of verifying the identities \
 
 homepage	http://www.h5l.org/
 master_sites	${homepage}dist/src/
-checksums	md5 6e5028077e2a6b101a4a72801ba71b9e \
-		sha1 68b013a68bca7d544d29af0f890b9c668ec16936 \
-		rmd160 055e858200e53108ac24760516ff9d58e4fee0d2
+checksums   md5 963c09f1b14c41660be70b55fae9f163 \
+            sha1 a385d959e3edd144aee79e9df585e44347342049 \
+            rmd160 ce97ac415e7c27912ba148b81c46e756dc54ba3e
 
-patchfiles      patch-appl-ftp-ftpd-logwtmp.c.diff
+depends_lib port:readline port:gettext
 
-# Use a separate prefix to avoid conflicts with the system kerberos headers
-# and libraries.
-destroot.violate_mtree yes
-configure.pre_args	--prefix=${prefix}/heimdal
-configure.args	--sysconfdir=${prefix}/etc --enable-shared \
-		--enable-static --without-x
+# Use a separate prefix to avoid conflicts with the port kerberos5
+# (and opensll, if that variant is selected)
+configure.pre_args --prefix=${prefix}/libexec/heimdal
+configure.args                 \
+    --sysconfdir=${prefix}/etc \
+    --enable-shared            \
+    --enable-static            \
+    --enable-pthread-support   \
+    --with-readline=${prefix}  \
+    --with-libintl=${prefix}   \
+    --without-x                \
+    --without-openldap         \
+    --without-openssl          \
+    --without-sqlite3
 
-configure.cflags-append	-D_FORTIFY_SOURCE=0
+# _FORTIFY_SOURCE: gcc extension to detect and prevent a subset of the
+# buffer overflows before they can do damage.  This is the only
+# Portfile that contians a reference to this define; why use it?
+#configure.cflags-append	-D_FORTIFY_SOURCE=0
+
+variant x11 description \
+    {Enable X11 use in libraries, and build X11-related applications} {
+    depends_lib-append     port:xorg-libice \
+                           port:xorg-libXau \
+                           port:xorg-libXt \
+                           port:xorg-libsm \
+                           port:xorg-libX11 \
+                           port:xorg-libXdmcp
+    configure.args-delete  --without-x
+    configure.args-append  --with-x=${prefix}
+}
+
+variant openldap description \
+    {Enable LDAP database support for keeping track \
+         of Kerberos information} {
+    depends_lib-append     port:openldap
+    configure.args-delete  --without-openldap
+    configure.args-append  --with-openldap=${prefix}
+}
+
+variant openssl description \
+    {Use OpenSSL libraries instead of internal ones for \
+         crypto and ssl related functions} {
+    depends_lib-append     port:openssl
+    configure.args-delete  --without-openssl
+    configure.args-append  --with-openssl=${prefix}
+}
+
+variant sqlite3 description \
+    {Enable SQlite3 database support for keeping track \
+         of Kerberos information} {
+    depends_lib-append      port:sqlite3
+    configure.args-delete  --without-sqlite3
+    configure.args-append  --with-sqlite3=${prefix}
+}
 
 test.run	yes
 test.target	check
