Update location of Heimdal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69820 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/cyrus-sasl2/Portfile
+++ b/dports/security/cyrus-sasl2/Portfile
@@ -85,14 +85,15 @@ post-destroot {
 }
 
 variant kerberos description "Enable Kerberos support" {
-    configure.args-append   --enable-gssapi \
-                            --enable-keep-db-open
+    configure.args-append   --enable-keep-db-open
 
 	if {${os.platform} == "darwin"} {
-		configure.args-append --with-gss_impl=mit
+		configure.args-append --with-gss_impl=mit \
+			--enable-gssapi=${prefix}
 	}
 	if {${os.platform} == "freebsd"} {
-		configure.args-append --with-gss_impl=heimdal
+		configure.args-append --with-gss_impl=heimdal \
+			--enable-gssapi=${prefix}/libexec/heimdal
 	}
 }
 
