--- a/dports/www/firefox-x11/Portfile
+++ b/dports/www/firefox-x11/Portfile
@@ -197,7 +197,7 @@ variant internal_dependencies description {Use internal versions of nspr, nss, a
 	port:libnotify
 
     archcheck.files-append \
-        heimdal/lib/libkrb5.dylib \
+        libexec/heimdal/lib/libkrb5.dylib \
         lib/libcanberra.dylib \
         lib/libgconf-2.dylib \
         lib/libgtk-x11-2.0.dylib \
@@ -233,7 +233,7 @@ post-patch {
     # Fix the correct library filenames for loading at runtime
     reinplace "s:libatk-1.0.so.0:${prefix}/lib/libatk-1.0.dylib:" ${worksrcpath}/accessible/src/atk/nsAppRootAccessible.cpp
 
-    reinplace "s:libgssapi_krb5.so.2:${prefix}/heimdal/lib/libgssapi.2.dylib:" ${worksrcpath}/extensions/auth/nsAuthGSSAPI.cpp
+    reinplace "s:libgssapi_krb5.so.2:${prefix}/libexec/heimdal/lib/libgssapi.2.dylib:" ${worksrcpath}/extensions/auth/nsAuthGSSAPI.cpp
 
     reinplace "s:libgnomeui-2.so.0:${prefix}/lib/libgnomeui-2.dylib:" ${worksrcpath}/modules/libpr0n/decoders/icon/gtk/nsIconChannel.cpp
     reinplace "s:libgnome-2.so.0:${prefix}/lib/libgnome-2.dylib:" ${worksrcpath}/modules/libpr0n/decoders/icon/gtk/nsIconChannel.cpp
