Switch maintainer.  Remove patches (works for me).  Correct plugin extension (back to dylib).  Fix use of MD2 cipher (ticket #25652).
git-svn-id: https://svn.macports.org/repository/macports/trunk@69821 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca-ossl/Portfile
+++ b/dports/devel/qca-ossl/Portfile
@@ -1,18 +1,19 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 name                qca-ossl
 version             2.0.0-beta3
-revision        1
+revision            2
 categories          devel crypto security
-maintainers         rowue openmaintainer
+maintainers         michaelld openmaintainer
 description         Qt Cryptographic Architecture - openssl plugin
 long_description \
     This library provides an easy API for the following features: SSL/TLS, \
     X509, SASL, RSA, Hashing (SHA1, MD5), Ciphers (BlowFish, 3DES, AES), \
     Functionality is supplied via plugins. \
     \
-    This plugin provides support for openssl related chipers
+    This plugin provides support for OpenSSL related ciphers.
 
 platforms           darwin
 
@@ -27,15 +28,25 @@ checksums           md5 bdc62c01321385c7da8d27b3902910ce \
 depends_lib         port:qca \
                     port:openssl
 
-patchfiles          disable-whirlpool.patch \
-                    fix-configure.patch
+# Without the patch, if MD2 isn't part of OpenSSL (which it is not by
+# default) then compiling will error out.  Upstream has already fixed
+# this issue; just waiting for a new release here.
+patchfiles          patch-qca-ossl.cpp.diff
 
-configure.pre_args  --qtdir=${prefix}/libexec/qt4-mac --with-qca=${prefix}
+set qt_dir         ${prefix}/libexec/qt4-mac
 
-destroot {
-    xinstall -m 755 -d ${destroot}${prefix}/libexec/qt4-mac/plugins/crypto
-        
-    xinstall -m 644 -W ${worksrcpath}/lib libqca-ossl.bundle \
-                ${destroot}${prefix}/libexec/qt4-mac/plugins/crypto
+configure.pre_args  --qtdir=${qt_dir} --with-qca=${prefix}
+
+destroot.destdir    INSTALL_ROOT="${destroot}"
+
+post-destroot {
+    # fix library path of installed library/ies
+    foreach fixfile [exec find ${destroot}${qt_dir} -name "*.dylib" | \
+                         sed -e "s@${destroot}@@g"] {
+        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
+    }
 }
 
+variant universal {
+    configure.universal_args-append --universal
+}
