--- a/dports/x11/wine-crossover-games/Portfile
+++ b/dports/x11/wine-crossover-games/Portfile
@@ -1,143 +1,137 @@
 # $Id$
 
-PortSystem              1.0
-PortGroup               archcheck 1.0
-PortGroup               xcodeversion 1.0
+PortSystem                  1.0
+PortGroup                   archcheck 1.0
+PortGroup                   xcodeversion 1.0
 
-name                    wine-crossover-games
-conflicts               wine wine-devel
-version                 9.0.1
-revision        1
-categories              x11
-maintainers             jeremyhu openmaintainer
-homepage                http://www.codeweavers.com/
-platforms               darwin
-distname                crossover-sources-${version}
-worksrcdir              wine
-build.target            depend all
-use_parallel_build      yes
-universal_variant       no
+name                        wine-crossover-games
+conflicts                   wine wine-devel
+version                     9.0.1
+revision                    1
+categories                  x11
+maintainers                 jeremyhu openmaintainer
+homepage                    http://www.codeweavers.com/
+platforms                   darwin
+distname                    crossover-sources-${version}
+worksrcdir                  wine
+build.target                depend all
+use_parallel_build          yes
+universal_variant           no
 
-minimum_xcodeversions   {8 2.5}
+minimum_xcodeversions       {8 2.5}
 
-description \
-    Wine Is Not an Emulator (1.1.34 with CodeWeavers modifications)
+description                 Wine Is Not an Emulator (1.1.34 with CodeWeavers modifications)
 
-long_description \
-    Wine is an implementation of the Windows APIs on top of X11.  This version contains the Codeweavers patches for Crossover Games
+long_description            Wine is an implementation of the Windows APIs on top of X11. \
+                            This version contains the Codeweavers patches for Crossover Games
 
-master_sites \
-    http://media.codeweavers.com/pub/crossover/source/ \
-    http://media.codeweavers.com/pub/crossover/source/archive/${version}/
+master_sites                http://media.codeweavers.com/pub/crossover/source/ \
+                            http://media.codeweavers.com/pub/crossover/source/archive/${version}/
 
-checksums \
-    md5     964f204bf47f022ee7790937c3c35984 \
-    sha1    d45433f5479eefd39df613a6c58f046ccfbcccbe \
-    rmd160  a8d8a75f638d3bcd7480661cb530d9e051b341d2
+checksums                   md5     964f204bf47f022ee7790937c3c35984 \
+                            sha1    d45433f5479eefd39df613a6c58f046ccfbcccbe \
+                            rmd160  a8d8a75f638d3bcd7480661cb530d9e051b341d2
 
-depends_lib \
-    port:expat \
-    port:fontconfig \
-    port:freetype \
-    port:jpeg \
-    port:lcms \
-    port:libiconv \
-    port:libpng \
-    port:libxml2 \
-    port:libxslt \
-    port:ncurses \
-    port:openssl \
-    port:zlib \
-    port:xorg-libsm \
-    port:xorg-libXcomposite \
-    port:xorg-libXcursor \
-    port:xorg-libXi \
-    port:xorg-libXinerama \
-    port:xorg-libXrandr \
-    port:xorg-libXxf86vm \
-    port:mesa
+depends_lib                 port:expat \
+                            port:fontconfig \
+                            port:freetype \
+                            port:jpeg \
+                            port:lcms \
+                            port:libiconv \
+                            port:libpng \
+                            port:libxml2 \
+                            port:libxslt \
+                            port:ncurses \
+                            port:openssl \
+                            port:zlib \
+                            port:xorg-libsm \
+                            port:xorg-libXcomposite \
+                            port:xorg-libXcursor \
+                            port:xorg-libXi \
+                            port:xorg-libXinerama \
+                            port:xorg-libXrandr \
+                            port:xorg-libXxf86vm \
+                            port:mesa
 
-archcheck.files         lib/libexpat.dylib \
-                        lib/libfontconfig.dylib \
-                        lib/libfreetype.dylib \
-                        lib/libjpeg.dylib \
-                        lib/liblcms.dylib \
-                        lib/libiconv.dylib \
-                        lib/libpng.dylib \
-                        lib/libxml2.dylib \
-                        lib/libxslt.dylib \
-                        lib/libncurses.dylib \
-                        lib/libssl.dylib \
-                        lib/libz.dylib \
-                        lib/libSM.dylib \
-                        lib/libXcomposite.dylib \
-                        lib/libXcursor.dylib \
-                        lib/libXi.dylib \
-                        lib/libXinerama.dylib \
-                        lib/libXrandr.dylib \
-                        lib/libXxf86vm.dylib \
-                        lib/libGL.dylib
+archcheck.files             lib/libexpat.dylib \
+                            lib/libfontconfig.dylib \
+                            lib/libfreetype.dylib \
+                            lib/libjpeg.dylib \
+                            lib/liblcms.dylib \
+                            lib/libiconv.dylib \
+                            lib/libpng.dylib \
+                            lib/libxml2.dylib \
+                            lib/libxslt.dylib \
+                            lib/libncurses.dylib \
+                            lib/libssl.dylib \
+                            lib/libz.dylib \
+                            lib/libSM.dylib \
+                            lib/libXcomposite.dylib \
+                            lib/libXcursor.dylib \
+                            lib/libXi.dylib \
+                            lib/libXinerama.dylib \
+                            lib/libXrandr.dylib \
+                            lib/libXxf86vm.dylib \
+                            lib/libGL.dylib
 
-depends_build \
-    port:pkgconfig
+depends_build               port:pkgconfig
 
 # Extract only the wine directory. We don't need the others, and their presence
 # interferes with the wine build (which uses parts of them if present).
-extract.post_args-append wine
+extract.post_args-append    wine
 
-patchfiles sl-audio.patch
+patchfiles                  sl-audio.patch
 
-configure.ldflags-append \
-    -framework CoreServices \
-    -lz
+configure.ldflags-append    -framework CoreServices \
+                            -lz
 
-configure.args          --without-alsa \
-                        --without-audioio \
-                        --without-capi \
-                        --with-cms \
-                        --with-coreaudio \
-                        --without-cups \
-                        --with-curses \
-                        --without-esd \
-                        --with-fontconfig \
-                        --with-freetype \
-                        --without-gphoto \
-                        --with-glu \
-                        --without-gnutls \
-                        --without-gsm \
-                        --without-hal \
-                        --without-jack \
-                        --with-jpeg \
-                        --without-ldap \
-                        --without-mpg123 \
-                        --without-nas \
-                        --without-openal \
-                        --with-opengl \
-                        --with-openssl \
-                        --without-oss \
-                        --with-png \
-                        --with-pthread \
-                        --without-sane \
-                        --with-xcomposite \
-                        --with-xcursor \
-                        --with-xinerama \
-                        --with-xinput \
-                        --with-xml \
-                        --with-xrandr \
-                        --with-xrender \
-                        --with-xshape \
-                        --with-xshm \
-                        --with-xslt \
-                        --with-xxf86vm \
-                        --with-x \
-                        --x-include=${prefix}/include \
-                        --x-lib=${prefix}/lib
+configure.args              --without-alsa \
+                            --without-audioio \
+                            --without-capi \
+                            --with-cms \
+                            --with-coreaudio \
+                            --without-cups \
+                            --with-curses \
+                            --without-esd \
+                            --with-fontconfig \
+                            --with-freetype \
+                            --without-gphoto \
+                            --with-glu \
+                            --without-gnutls \
+                            --without-gsm \
+                            --without-hal \
+                            --without-jack \
+                            --with-jpeg \
+                            --without-ldap \
+                            --without-mpg123 \
+                            --without-nas \
+                            --without-openal \
+                            --with-opengl \
+                            --with-openssl \
+                            --without-oss \
+                            --with-png \
+                            --with-pthread \
+                            --without-sane \
+                            --with-xcomposite \
+                            --with-xcursor \
+                            --with-xinerama \
+                            --with-xinput \
+                            --with-xml \
+                            --with-xrandr \
+                            --with-xrender \
+                            --with-xshape \
+                            --with-xshm \
+                            --with-xslt \
+                            --with-xxf86vm \
+                            --with-x \
+                            --x-include=${prefix}/include \
+                            --x-lib=${prefix}/lib
 
 # This is not 64-bit friendly yet
 if {[info exists supported_archs]} {
-    supported_archs i386
+supported_archs             i386
 }
-configure.build_arch i386
+configure.build_arch        i386
 
 platform darwin 9 {
     # Fix "Xcode 3.x cannot build 16-bit code correctly. Use --disable-win16 if you don't need 16-bit support."
@@ -158,12 +152,13 @@ pre-fetch {
         return -code error "incompatible processor"
     }
 }
+
 post-destroot {
     xinstall -d ${destroot}${prefix}/libexec/wine
     xinstall -m 755 ${filespath}/wine.in ${destroot}${prefix}/bin/wine
     reinplace s|@PREFIX@|${prefix}|g ${destroot}${prefix}/bin/wine
 }
 
-livecheck.type          regex
-livecheck.url           [lindex ${master_sites} 0]
-livecheck.regex         {(\d+(\.\d+)+)\.tar}
+livecheck.type              regex
+livecheck.url               [lindex ${master_sites} 0]
+livecheck.regex             {(\d+(\.\d+)+)\.tar}
