wine-devel: enable gnutls support (#25548) and add xrender dependency (#25349)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69827 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/wine-devel/Portfile
+++ b/dports/x11/wine-devel/Portfile
@@ -8,6 +8,7 @@ name                        wine-devel
 conflicts                   wine wine-crossover-games
 set my_name                 wine
 version                     1.2-rc7
+revision                    1
 license                     LGPL-2.1+
 categories                  x11
 maintainers                 ryandesign jwa openmaintainer
@@ -46,6 +47,7 @@ checksums                   ${wine_distfile} \
 depends_lib                 port:expat \
                             port:fontconfig \
                             port:freetype \
+                            port:gnutls \
                             port:jpeg \
                             port:lcms \
                             port:libiconv \
@@ -63,11 +65,13 @@ depends_lib                 port:expat \
                             port:xorg-libXinerama \
                             port:xorg-libXrandr \
                             port:xorg-libXxf86vm \
+                            port:xrender \
                             port:mesa
 
 archcheck.files             lib/libexpat.dylib \
                             lib/libfontconfig.dylib \
                             lib/libfreetype.dylib \
+                            lib/libgnutls.dylib \
                             lib/libjpeg.dylib \
                             lib/liblcms.dylib \
                             lib/libiconv.dylib \
@@ -85,6 +89,7 @@ archcheck.files             lib/libexpat.dylib \
                             lib/libXinerama.dylib \
                             lib/libXrandr.dylib \
                             lib/libXxf86vm.dylib \
+                            lib/libXrender.dylib \
                             lib/libGL.dylib
 
 depends_build               port:flex \
@@ -105,7 +110,7 @@ configure.args              --without-alsa \
                             --with-freetype \
                             --without-gphoto \
                             --with-glu \
-                            --without-gnutls \
+                            --with-gnutls \
                             --without-gsm \
                             --without-hal \
                             --without-jack \
