wine-crossover-games: Buildfix for openssl-1.  #25602
git-svn-id: https://svn.macports.org/repository/macports/trunk@69828 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/wine-crossover-games/Portfile
+++ b/dports/x11/wine-crossover-games/Portfile
@@ -80,7 +80,7 @@ depends_build               port:pkgconfig
 # interferes with the wine build (which uses parts of them if present).
 extract.post_args-append    wine
 
-patchfiles                  sl-audio.patch
+patchfiles                  sl-audio.patch openssl-1.patch
 
 configure.ldflags-append    -framework CoreServices \
                             -lz
