Trial fix for ticket #25716.  Better way to generate Makefile's and fix qmake flaw in them.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69829 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/liblastfm/Portfile
+++ b/dports/audio/liblastfm/Portfile
@@ -35,10 +35,17 @@ configure.args      --release
 
 post-configure {
     # create Makefile's, then patch them to remove a flaw made by qmake
-    foreach tMf {src/Makefile src/fingerprint/Makefile \
-                 tests/Makefile demos/Makefile} {
+
+    # (1) find subdir Makefile names from top-level Makefile, and have
+    # 'make' create each in turn.
+    foreach tMf [exec grep -e "Makefile\[\^ \]\*:" ${worksrcpath}/Makefile | \
+                     sed -e "s@\\(\[^ \]*/Makefile\[^ \]*\\):\[^ \]*@\\1@g"] {
         system "cd ${worksrcpath} && make ${tMf}"
-        reinplace "s|-arch ${build_arch} -arch|-arch ${build_arch}|" ${worksrcpath}/${tMf}
+    }
+
+    # (2) find all created Makefile*'s, and reinplace the offending flaw
+    foreach tMf [exec find ${worksrcpath} -name "Makefile*"] {
+        reinplace "s|-arch ${build_arch} -arch|-arch ${build_arch}|" ${tMf}
     }
 }
 
