wine-crossover-games: enable gnutls support (#25548) and add xrender dependency (#25349)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69830 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/wine-crossover-games/Portfile
+++ b/dports/x11/wine-crossover-games/Portfile
@@ -7,7 +7,7 @@ PortGroup                   xcodeversion 1.0
 name                        wine-crossover-games
 conflicts                   wine wine-devel
 version                     9.0.1
-revision                    1
+revision                    2
 categories                  x11
 maintainers                 jeremyhu openmaintainer
 homepage                    http://www.codeweavers.com/
@@ -35,6 +35,7 @@ checksums                   md5     964f204bf47f022ee7790937c3c35984 \
 depends_lib                 port:expat \
                             port:fontconfig \
                             port:freetype \
+                            port:gnutls \
                             port:jpeg \
                             port:lcms \
                             port:libiconv \
@@ -51,11 +52,13 @@ depends_lib                 port:expat \
                             port:xorg-libXinerama \
                             port:xorg-libXrandr \
                             port:xorg-libXxf86vm \
+                            port:xrender \
                             port:mesa
 
 archcheck.files             lib/libexpat.dylib \
                             lib/libfontconfig.dylib \
                             lib/libfreetype.dylib \
+                            lib/libgnutls.dylib \
                             lib/libjpeg.dylib \
                             lib/liblcms.dylib \
                             lib/libiconv.dylib \
@@ -72,6 +75,7 @@ archcheck.files             lib/libexpat.dylib \
                             lib/libXinerama.dylib \
                             lib/libXrandr.dylib \
                             lib/libXxf86vm.dylib \
+                            lib/libXrender.dylib \
                             lib/libGL.dylib
 
 depends_build               port:pkgconfig
@@ -97,7 +101,7 @@ configure.args              --without-alsa \
                             --with-freetype \
                             --without-gphoto \
                             --with-glu \
-                            --without-gnutls \
+                            --with-gnutls \
                             --without-gsm \
                             --without-hal \
                             --without-jack \
