--- a/dports/x11/wine/Portfile
+++ b/dports/x11/wine/Portfile
@@ -7,8 +7,7 @@ PortGroup                   xcodeversion 1.0
 name                        wine
 conflicts                   wine-devel wine-crossover-games
 set my_name                 wine
-version                     1.0.1
-revision                    8
+version                     1.2
 license                     LGPL-2.1+
 categories                  x11
 maintainers                 ryandesign jwa openmaintainer
@@ -18,7 +17,7 @@ use_bzip2                   yes
 distname                    ${my_name}-${version}
 dist_subdir                 ${my_name}
 set wine_distfile           [suffix ${distname}]
-set wine_gecko_distfile     wine_gecko-0.1.0.cab
+set wine_gecko_distfile     wine_gecko-1.0.0-x86.cab
 distfiles                   ${wine_distfile} ${wine_gecko_distfile}
 extract.only                ${wine_distfile}
 build.target                depend all
@@ -35,18 +34,19 @@ master_sites                sourceforge:wine \
                             http://ibiblio.org/pub/linux/system/emulators/wine/
 
 checksums                   ${wine_distfile} \
-                            md5     b49540f4ed194c7e8da4cdc4b5bd3404 \
-                            sha1    0550b03bf7b314514a87b6abb2198da96ef83b22 \
-                            rmd160  fecd2bf970c51c80fc02ca39631034f066da145e \
+                            md5     eb4e5423b277fc1e77807b04f366f7b7 \
+                            sha1    dc37a32edb274167990ca7820f92c2d85962e37d \
+                            rmd160  57b8a89cc074e2fa490222eedfa21a9f7a3f6545 \
                             ${wine_gecko_distfile} \
-                            md5     b188c296f045d20abdb11e9c0564894b \
-                            sha1    c16f1072dc6b0ced20935662138dcf019a38cd56 \
-                            rmd160  61f85ee39e96f88783541460d2fce31db7cc0183
+                            md5     9c5c335fc077c0558561afaf25a09e51 \
+                            sha1    afa22c52bca4ca77dcb9edb3c9936eb23793de01 \
+                            rmd160  57618dbffa7b7226dcd44f86c3c569ab8a5ff938
 
 # Note: Most of the X11 libs are dlopen()'d
 depends_lib                 port:expat \
                             port:fontconfig \
                             port:freetype \
+                            port:gnutls \
                             port:jpeg \
                             port:lcms \
                             port:libiconv \
@@ -55,6 +55,7 @@ depends_lib                 port:expat \
                             port:libxslt \
                             port:ncurses \
                             port:openssl \
+                            port:tiff \
                             port:zlib \
                             port:xorg-libsm \
                             port:xorg-libXcomposite \
@@ -63,11 +64,13 @@ depends_lib                 port:expat \
                             port:xorg-libXinerama \
                             port:xorg-libXrandr \
                             port:xorg-libXxf86vm \
+                            port:xrender \
                             port:mesa
 
 archcheck.files             lib/libexpat.dylib \
                             lib/libfontconfig.dylib \
                             lib/libfreetype.dylib \
+                            lib/libgnutls.dylib \
                             lib/libjpeg.dylib \
                             lib/liblcms.dylib \
                             lib/libiconv.dylib \
@@ -76,6 +79,7 @@ archcheck.files             lib/libexpat.dylib \
                             lib/libxslt.dylib \
                             lib/libncurses.dylib \
                             lib/libssl.dylib \
+                            lib/libtiff.dylib \
                             lib/libz.dylib \
                             lib/libSM.dylib \
                             lib/libXcomposite.dylib \
@@ -84,15 +88,11 @@ archcheck.files             lib/libexpat.dylib \
                             lib/libXinerama.dylib \
                             lib/libXrandr.dylib \
                             lib/libXxf86vm.dylib \
+                            lib/libXrender.dylib \
                             lib/libGL.dylib
 
-depends_build               port:pkgconfig
-
-# patch-freetype.c-pFT_MulFix.diff should no longer be needed with wine 1.2
-patchfiles                  patch-freetype.c-pFT_MulFix.diff
-
-use_autoreconf              yes
-autoreconf.args             -fvi
+depends_build               port:flex \
+                            port:pkgconfig
 
 configure.ldflags-append    -framework CoreServices \
                             -lz
@@ -109,16 +109,23 @@ configure.args              --without-alsa \
                             --with-freetype \
                             --without-gphoto \
                             --with-glu \
+                            --with-gnutls \
+                            --without-gsm \
                             --without-hal \
                             --without-jack \
                             --with-jpeg \
                             --without-ldap \
+                            --without-mpg123 \
                             --without-nas \
+                            --without-openal \
                             --with-opengl \
                             --with-openssl \
                             --without-oss \
                             --with-png \
+                            --with-pthread \
                             --without-sane \
+                            --with-tiff \
+                            --without-v4l \
                             --with-xcomposite \
                             --with-xcursor \
                             --with-xinerama \
@@ -129,7 +136,7 @@ configure.args              --without-alsa \
                             --with-xshape \
                             --with-xshm \
                             --with-xslt \
-                            --with-xvidmode \
+                            --with-xxf86vm \
                             --with-x \
                             --x-include=${prefix}/include \
                             --x-lib=${prefix}/lib
@@ -140,6 +147,13 @@ supported_archs             i386
 }
 configure.build_arch        i386
 
+platform darwin 9 {
+    # Fix "Xcode 3.x cannot build 16-bit code correctly. Use --disable-win16 if you don't need 16-bit support."
+    # Only affects Xcode 3.0.x and 3.1.x, not 3.2.x.
+    # See http://bugs.winehq.org/show_bug.cgi?id=14920
+    configure.args-append --disable-win16
+}
+
 platform darwin 10 {
     # _getdirentries_is_not_available_when_64_bit_inodes_are_in_effect dlls/ntdll/directory.o
     configure.cppflags-append -D_DARWIN_NO_64_BIT_INODE
@@ -149,20 +163,6 @@ pre-fetch {
     if {"big" == ${os.endian}} {
         ui_error "${name} can only be used on an Intel Mac or other computer with a little-endian processor."
         return -code error "incompatible processor"
-    }
-    if {"darwin" == ${os.platform} && ${os.major} > 9} {
-        ui_error "${name} ${version} is not compatible with Mac OS X 10.6 or later. Until ${name} 1.2 is released, please install wine-devel instead."
-        return -code error "incompatible Mac OS X version"
-    }
-}
-
-pre-configure {
-    foreach badfile {/usr/local/include/dispatch/dispatch.h} {
-        if {[file exists ${badfile}]} {
-            ui_error "You have a copy of [file tail ${badfile}] in [file dirname ${badfile}] that will prevent"
-            ui_error "${name} from building properly. Please remove it before trying again."
-            return -code error "incompatible file"
-        }
     }
 }
 
