mystonline-wine: now that wine 1.2 final is out, depend on that instead of wine-devel
git-svn-id: https://svn.macports.org/repository/macports/trunk@69832 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/mystonline-wine/Portfile
+++ b/dports/games/mystonline-wine/Portfile
@@ -20,10 +20,10 @@ long_description            ${description} (MO:ULagain) running via Wine
 
 depends_build               port:winetricks
 
-depends_run                 path:bin/wine:wine-devel \
+depends_run                 path:bin/wine:wine \
                             port:mystonline-bootstrap
 
-depends_skip_archcheck      wine-devel
+depends_skip_archcheck      wine
 
 set libexec_dir             ${prefix}/libexec/${name}
 set share_dir               ${prefix}/share/${my_name}
