md5sha1sum: fix universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@69834 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/md5sha1sum/Portfile
+++ b/dports/sysutils/md5sha1sum/Portfile
@@ -14,6 +14,8 @@ master_sites		${homepage}
 
 checksums		sha1 84a46bfd2b49daa0a601a9c55b7d87c27e19ef87
 
+configure.universal_args-delete	--disable-dependency-tracking
+
 destroot {
 	xinstall -m 755 -d ${destroot}${prefix}/bin
 	xinstall -m 755 ${worksrcpath}/md5sum ${destroot}${prefix}/bin
