--- a/dports/sysutils/md5sha1sum/Portfile
+++ b/dports/sysutils/md5sha1sum/Portfile
@@ -14,7 +14,8 @@ master_sites		${homepage}
 
 checksums		sha1 84a46bfd2b49daa0a601a9c55b7d87c27e19ef87
 
-patchfiles		patch-existing.diff
+patchfiles		patch-existing.diff \
+			patch-macosx.diff
 
 configure.universal_args-delete	--disable-dependency-tracking
 
