md5sha1sum: always look for OpenSSL libraries and headers in ${prefix}, not in /usr/local or other places
git-svn-id: https://svn.macports.org/repository/macports/trunk@69837 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/md5sha1sum/Portfile
+++ b/dports/sysutils/md5sha1sum/Portfile
@@ -17,6 +17,9 @@ checksums		sha1 84a46bfd2b49daa0a601a9c55b7d87c27e19ef87
 patchfiles		patch-existing.diff \
 			patch-macosx.diff
 
+configure.env		SSLINCPATH=${prefix}/include \
+			SSLLIBPATH=${prefix}/lib
+
 configure.universal_args-delete	--disable-dependency-tracking
 
 destroot {
