utimer requires pkgconfig
git-svn-id: https://svn.macports.org/repository/macports/trunk@69839 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/utimer/Portfile
+++ b/dports/sysutils/utimer/Portfile
@@ -24,6 +24,8 @@ checksums                   md5     5fc82bcea449bdc3527a6833a1196641 \
                             sha1    b9590ef4ff6bb8ecf64bb703f50f1bfeddf3fbdd \
                             rmd160  046be734e2f1aaa2af13cbfc2236059c484965dc
 
+depends_build               port:pkgconfig
+
 depends_lib                 path:lib/pkgconfig/glib-2.0.pc:glib2 \
                             port:intltool
 
