md5sha1sum: use a nonzero exit status when the configure script encounters an unknown option; this would have made it easier to find problems like the one fixed in r69834
git-svn-id: https://svn.macports.org/repository/macports/trunk@69840 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/md5sha1sum/Portfile
+++ b/dports/sysutils/md5sha1sum/Portfile
@@ -15,6 +15,7 @@ master_sites		${homepage}
 checksums		sha1 84a46bfd2b49daa0a601a9c55b7d87c27e19ef87
 
 patchfiles		patch-existing.diff \
+			patch-exit.diff \
 			patch-macosx.diff
 
 configure.env		SSLINCPATH=${prefix}/include \
