p5-xml-sax-expat: remove post-activate's reliance on existence of worksrcpath (#25635, maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69842 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-xml-sax-expat/Portfile
+++ b/dports/perl/p5-xml-sax-expat/Portfile
@@ -4,6 +4,7 @@ PortSystem            1.0
 PortGroup             perl5 1.0
 
 perl5.setup           XML-SAX-Expat 0.40
+revision              1
 maintainers           email.arc.nasa.gov:sal
 description           SAX2 Driver for Expat (XML::Parser)
 long_description      This is an implementation of a SAX2 driver \
@@ -21,5 +22,5 @@ depends_lib-append    port:p5-xml-parser \
                       port:p5-xml-namespacesupport
 
 post-activate {
-    system "cd ${worksrcpath} && ${build.cmd} install_sax_expat"
+    system "${perl5.bin} -I${perl5.lib} -MXML::SAX -e \"XML::SAX->add_parser(q(XML::SAX::Expat))->save_parsers()\""
 }
