--- a/dports/math/laspack/Portfile
+++ b/dports/math/laspack/Portfile
@@ -1,31 +1,32 @@
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name			laspack
-version			1.12.2
-categories		math
-platforms		darwin
-maintainers		nomaintainer
-description		Package for solving large sparse systems of linear equations
-long_description	LASPack is a package for solving large sparse systems of \
-			linear equations like those which arise from discretization of \
-			partial differential equations.
+name                laspack
+version             1.12.2
+categories          math
+platforms           darwin
+maintainers         nomaintainer
+description         Package for solving large sparse systems of linear equations
+long_description \
+   LASPack is a package for solving large sparse systems of linear equations \
+   like those which arise from discretization of partial differential \
+   equations.
 
-homepage		http://www.tu-dresden.de/mwism/skalicky/laspack/laspack.html
-master_sites		ftp://netlib.bell-labs.com/netlib/linalg/ \
-			http://www.tu-dresden.de/mwism/skalicky/
-distname		${name}
-dist_subdir		${name}/${version}
-extract.suffix		.tgz
-checksums		md5 fcfb3c86cc993e29eb477191b1136a8d
-patchfiles		patch-makefile
+homepage            http://www.tu-dresden.de/mwism/skalicky/laspack/laspack.html
+master_sites        ftp://netlib.bell-labs.com/netlib/linalg/ \
+                    http://www.tu-dresden.de/mwism/skalicky/
+distname            ${name}
+dist_subdir         ${name}/${version}
+extract.suffix      .tgz
+checksums           md5 fcfb3c86cc993e29eb477191b1136a8d
+patchfiles          patch-makefile
 
-worksrcdir		laspack
+worksrcdir          laspack
 
-use_configure	no
+use_configure       no
 
-build.args		prefix=${prefix}
+build.args          prefix=${prefix}
 
-destroot.args	prefix=${prefix}
+destroot.args       prefix=${prefix}
 
