math/laspack - fix master_sites (ticket #25734) and homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@69844 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/laspack/Portfile
+++ b/dports/math/laspack/Portfile
@@ -13,9 +13,9 @@ long_description \
    like those which arise from discretization of partial differential \
    equations.
 
-homepage            http://www.tu-dresden.de/mwism/skalicky/laspack/laspack.html
-master_sites        ftp://netlib.bell-labs.com/netlib/linalg/ \
-                    http://www.tu-dresden.de/mwism/skalicky/
+homepage            http://www.mgnet.org/mgnet/Codes/laspack/html/laspack.html
+master_sites        http://netlib.sandia.gov/linalg/ \
+                    http://www.netlib.org/linalg/ freebsd
 distname            ${name}
 dist_subdir         ${name}/${version}
 extract.suffix      .tgz
