--- a/dports/lang/gcc43/Portfile
+++ b/dports/lang/gcc43/Portfile
@@ -51,12 +51,9 @@ checksums           ${dcore} \
 
 use_bzip2       yes
 
-# gmp and mpfr are not universal
-universal_variant       no
-
 depends_lib     port:gmp port:mpfr port:libiconv
 
-patchfiles      Make-lang.in.diff
+patchfiles      Make-lang.in.diff darwin10.diff i386_multilib.diff
 patch.dir       ${workpath}/gcc-${version}
 
 set major       4.3
@@ -68,10 +65,11 @@ post-extract {
 }
 
 # the generated compiler doesn't accept -arch
-if {[info exists build_arch] && ${os.platform} == "darwin"} {
-    configure.cc_archflags
-    configure.cxx_archflags
-    configure.objc_archflags
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+platform darwin {
     configure.pre_args-append --build=${build_arch}-apple-darwin${os.major}
 }
 
@@ -87,7 +85,8 @@ configure.args  --enable-languages=c,c++,objc,obj-c++,java,fortran \
         --program-suffix=-mp-${major} \
         --with-gxx-include-dir=${prefix}/include/${name}/c++/ \
         --with-gmp=${prefix} \
-        --with-mpfr=${prefix}
+        --with-mpfr=${prefix} \
+        --disable-multilib
 # do NOT use MacPorts binutils -- they do not work
 configure.env-append    AR_FOR_TARGET=/usr/bin/ar \
             AS_FOR_TARGET=/usr/bin/as \
@@ -117,10 +116,6 @@ post-destroot {
     xinstall -m 444 ${filespath}/mp-gcc43 ${destroot}${prefix}/etc/select/gcc/
 }
 
-platform powerpc {
-    configure.args-append --disable-multilib
-}
-
 # Java support does not compile on 10.4/x86
 platform darwin 8 i386 {
 	configure.args-delete   --enable-languages=c,c++,objc,obj-c++,java,fortran
@@ -140,7 +135,24 @@ platform darwin 8 i386 {
 #               --with-ar=${prefix}/bin/odar
 #}
 
+# multilib broken, ticket #22148
+universal_variant no
+
+#platform powerpc {
+#    configure.universal_archs ppc ppc64
+#}
+#platform i386 {
+#    configure.universal_archs i386 x86_64
+#}
+#configure.universal_cflags
+#configure.universal_cxxflags
+#configure.universal_ldflags
+#configure.universal_args
+#variant universal {
+#    configure.args-delete --disable-multilib
+#    configure.args-append --enable-multilib
+#}
+
 livecheck.type  regex
 livecheck.url   http://gcc.gnu.org/gcc-4.3/
 livecheck.regex GCC (4\\.3\\.\[0-9\])
-
