--- a/dports/devel/opencdk/Portfile
+++ b/dports/devel/opencdk/Portfile
@@ -2,6 +2,7 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup       archcheck 1.0
 
 name            opencdk
 version         0.6.6
@@ -25,6 +26,9 @@ configure.args  --with-libgcrypt-prefix=${prefix}
 
 depends_lib     port:libgcrypt \
                 port:zlib
+
+archcheck.files lib/libgcrypt.dylib \
+                lib/libz.dylib
 
 livecheck.type      gnu
 livecheck.name      gnutls
