--- a/dports/devel/libgcrypt/Portfile
+++ b/dports/devel/libgcrypt/Portfile
@@ -2,6 +2,7 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup       archcheck 1.0
 
 name            libgcrypt
 version         1.4.5
@@ -29,6 +30,8 @@ checksums       md5     cc2017ad09b4543f8b3b5e9a53cfd89d \
                 rmd160  5f43147cb40beb903cc1a620d2706eb08c66a889
 
 depends_lib     port:libgpg-error
+
+archcheck.files lib/libgpg-error.dylib
 
 configure.args  --disable-asm
 
