libgpg-error: use archcheck portgroup; see #25738
git-svn-id: https://svn.macports.org/repository/macports/trunk@69849 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libgpg-error/Portfile
+++ b/dports/devel/libgpg-error/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem      1.0
+PortGroup       archcheck 1.0
 
 name            libgpg-error
 version         1.8
@@ -20,6 +21,9 @@ use_bzip2       yes
 
 depends_lib     port:libiconv \
                 port:gettext
+
+archcheck.files lib/libiconv.dylib \
+                lib/libintl.dylib
 
 checksums           md5     1d2005268a2f096db28cf9cf77b3229a \
                     sha1    f5cf677a7cd684645feaa9704d09eb5cd6d97e8a \
