gcc43: enable multilib via universal variant (#22148, #22116)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69854 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/gcc43/Portfile
+++ b/dports/lang/gcc43/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name            gcc43
 version         4.3.5
-revision        1
+revision        2
 platforms       darwin
 categories      lang
 maintainers     mww
@@ -135,23 +135,19 @@ platform darwin 8 i386 {
 #               --with-ar=${prefix}/bin/odar
 #}
 
-# multilib broken, ticket #22148
-universal_variant no
-
-#platform powerpc {
-#    configure.universal_archs ppc ppc64
-#}
-#platform i386 {
-#    configure.universal_archs i386 x86_64
-#}
-#configure.universal_cflags
-#configure.universal_cxxflags
-#configure.universal_ldflags
-#configure.universal_args
-#variant universal {
-#    configure.args-delete --disable-multilib
-#    configure.args-append --enable-multilib
-#}
+platform powerpc {
+    configure.universal_archs ppc ppc64
+}
+platform i386 {
+    configure.universal_archs i386 x86_64
+}
+configure.universal_cflags
+configure.universal_cxxflags
+configure.universal_ldflags
+configure.universal_args
+variant universal {
+    configure.args-delete --disable-multilib
+}
 
 livecheck.type  regex
 livecheck.url   http://gcc.gnu.org/gcc-4.3/
