gcc44, gcc45, gcc46: enable multilib via universal variant (#22116)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69859 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/gcc44/Portfile
+++ b/dports/lang/gcc44/Portfile
@@ -51,9 +51,6 @@ checksums           gcc-core-${version}.tar.bz2 \
 
 use_bzip2		yes
 
-# gmp and mpfr are not universal
-universal_variant       no
-
 depends_lib		port:gmp port:mpfr port:libiconv
 
 patch.dir       ${workpath}/gcc-${version}
@@ -63,13 +60,11 @@ set major		4.4
 worksrcdir		build
 
 # the generated compiler doesn't accept -arch
-if {${os.platform} == "darwin"} {
-    configure.cc_archflags
-    configure.cxx_archflags
-    configure.objc_archflags
-    if {[info exists configure.ld_archflags]} {
-        configure.ld_archflags
-    }
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+platform darwin {
     configure.pre_args-append --build=${build_arch}-apple-darwin${os.major}
 }
 
@@ -90,7 +85,8 @@ configure.args	--enable-languages=c,c++,objc,obj-c++,java,fortran \
 		--with-gxx-include-dir=${prefix}/include/${name}/c++/ \
 		--with-gmp=${prefix} \
 		--with-mpfr=${prefix} \
-		--enable-stage1-checking
+		--enable-stage1-checking \
+		--disable-multilib
 # do NOT use MacPorts binutils -- they do not work
 configure.env-append    AR_FOR_TARGET=/usr/bin/ar \
 			AS_FOR_TARGET=/usr/bin/as \
@@ -121,10 +117,6 @@ post-destroot {
 		${destroot}${prefix}/share/python/classfile-44.py
 }
 
-platform powerpc {
-	configure.args-append --disable-multilib
-}
-
 platform darwin 10 {
 	configure.args-append --enable-fully-dynamic-string
 }
@@ -142,7 +134,20 @@ variant odcctools \
 				--with-ar=${prefix}/bin/odar
 }
 
+platform powerpc {
+    configure.universal_archs ppc ppc64
+}
+platform i386 {
+    configure.universal_archs i386 x86_64
+}
+configure.universal_cflags
+configure.universal_cxxflags
+configure.universal_ldflags
+configure.universal_args
+variant universal {
+    configure.args-delete --disable-multilib
+}
+
 livecheck.type	regex
 livecheck.url	http://gcc.gnu.org/gcc-4.4/
 livecheck.regex	GCC (4\\.4\\.\[0-9\])
-
