--- a/dports/lang/gcc45/Portfile
+++ b/dports/lang/gcc45/Portfile
@@ -61,9 +61,6 @@ checksums           gcc-core-${version}.tar.bz2 \
 
 use_bzip2		yes
 
-# gmp and mpfr are not universal
-universal_variant       no
-
 depends_lib		port:gmp port:mpfr port:libiconv port:libmpc
 
 patchfiles		tls_configure_fix.diff
@@ -74,10 +71,11 @@ set major		4.5
 worksrcdir		build
 
 # the generated compiler doesn't accept -arch
-if {[info exists build_arch] && ${os.platform} == "darwin"} {
-    configure.cc_archflags
-    configure.cxx_archflags
-    configure.objc_archflags
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+platform darwin {
     configure.pre_args-append --build=${build_arch}-apple-darwin${os.major}
 }
 
@@ -104,7 +102,8 @@ configure.args	--enable-languages=c,c++,objc,obj-c++,fortran,java \
 		--with-gmp=${prefix} \
 		--with-mpfr=${prefix} \
 		--with-mpc=${prefix} \
-		--enable-stage1-checking
+		--enable-stage1-checking \
+		--disable-multilib
 # do NOT use MacPorts binutils -- they do not work
 configure.env-append    AR_FOR_TARGET=/usr/bin/ar \
 			AS_FOR_TARGET=/usr/bin/as \
@@ -135,15 +134,24 @@ post-destroot {
 		${destroot}${prefix}/share/python/classfile-45.py
 }
 
-platform powerpc {
-	configure.args-append --disable-multilib
-}
-
 platform darwin 10 {
 	configure.args-append --enable-fully-dynamic-string
+}
+
+platform powerpc {
+    configure.universal_archs ppc ppc64
+}
+platform i386 {
+    configure.universal_archs i386 x86_64
+}
+configure.universal_cflags
+configure.universal_cxxflags
+configure.universal_ldflags
+configure.universal_args
+variant universal {
+    configure.args-delete --disable-multilib
 }
 
 livecheck.type  regex
 livecheck.url   http://gcc.gnu.org/gcc-4.5/
 livecheck.regex GCC (4\\.5\\.\[0-9\])
-
