--- a/dports/lang/gcc46/Portfile
+++ b/dports/lang/gcc46/Portfile
@@ -59,9 +59,6 @@ checksums           gcc-core-${version}.tar.bz2 \
 
 use_bzip2		yes
 
-# gmp and mpfr are not universal
-universal_variant       no
-
 depends_lib		port:gmp port:mpfr port:libiconv port:libmpc
 
 patchfiles		patch-160729.diff
@@ -73,10 +70,11 @@ set major		4.6
 worksrcdir		build
 
 # the generated compiler doesn't accept -arch
-if {[info exists build_arch] && ${os.platform} == "darwin"} {
-    configure.cc_archflags
-    configure.cxx_archflags
-    configure.objc_archflags
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+platform darwin {
     configure.pre_args-append --build=${build_arch}-apple-darwin${os.major}
 }
 
@@ -103,7 +101,8 @@ configure.args	--enable-languages=c,c++,objc,obj-c++ \
 		--with-gmp=${prefix} \
 		--with-mpfr=${prefix} \
 		--with-mpc=${prefix} \
-		--enable-stage1-checking
+		--enable-stage1-checking \
+		--disable-multilib
 # do NOT use MacPorts binutils -- they do not work
 configure.env-append    AR_FOR_TARGET=/usr/bin/ar \
 			AS_FOR_TARGET=/usr/bin/as \
@@ -130,10 +129,6 @@ post-destroot {
 	xinstall -m 444 ${filespath}/mp-gcc46 ${destroot}${prefix}/etc/select/gcc/
 }
 
-platform powerpc {
-	configure.args-append --disable-multilib
-}
-
 platform darwin 10 {
 	configure.args-append --enable-fully-dynamic-string
 }
@@ -158,7 +153,20 @@ variant java conflicts gfortran \
 	}
 }
 
+platform powerpc {
+    configure.universal_archs ppc ppc64
+}
+platform i386 {
+    configure.universal_archs i386 x86_64
+}
+configure.universal_cflags
+configure.universal_cxxflags
+configure.universal_ldflags
+configure.universal_args
+variant universal {
+    configure.args-delete --disable-multilib
+}
+
 livecheck.type	regex
 livecheck.url	ftp://gcc.gnu.org/pub/gcc/snapshots/
 livecheck.regex	LATEST-4.6 -> (4.6-\[0-9\]+)
-
