flasm: add universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@69861 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/flasm/Portfile
+++ b/dports/devel/flasm/Portfile
@@ -40,8 +40,14 @@ post-patch {
 
 use_configure               no
 
-build.args                  CC=${configure.cc} \
-                            CFLAGS="${configure.cflags} ${configure.cc_archflags}"
+build.args                  CC=${configure.cc}
+
+variant universal {
+    build.args-append       CFLAGS="${configure.cflags} ${configure.universal_cflags}"
+}
+if {![variant_isset universal]} {
+    build.args-append       CFLAGS="${configure.cflags} ${configure.cc_archflags}"
+}
 
 destroot {
     xinstall -W ${worksrcpath} flasm ${destroot}${prefix}/bin
